<resources>
    <string name="app_name">CASPER_Android_Client</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Logo">CASP.ER</string>
    <string name="LoginButtonText">Login</string>
    <string name="PasswordHint">Password</string>
    <string name="UserHint">USER</string>
    <string name="BackButton">Back</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example Video Quality Settings -->
    <string name="pref_header_video_quality">Video Quality Setting</string>
    <string name="pref_enable_quality">Enable epic quality</string>
    <string name="pref_video_summary">This slidebar enables epic quality</string>



    <!-- Example User information Settings -->
    <string name="pref_header_user_information">User information</string>


    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
    <string name="Error_msg">Wrong Username \nOr Password</string>
    <string name="logo">logo</string>
    <string name="sockets">sockets</string>
    <string name="messageToServer">Message</string>
    <string name="portHint">Port</string>
    <string name="addressHint">Address</string>
    <string name="sendButton">send</string>
    <string name="clearButton">clear</string>
    <string name="connectButton">connect</string>
    <string name="incommmingMessage">Incomming msg</string>
    <string name="socketLogo">Socket Connector</string>
    <string name="drive">Drive</string>
    <string name="auto">Auto Connect</string>
    <string name="Socket_Connection">Manual Socket Connection</string>
    <string name="User_Hint">Username</string>
    <string name="getVideo">Get Video</string>
    <string name="videoStatus">No Video Available</string>
</resources>
