<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group1.com.casper_android_client.Socket_Connection"
    android:background="@color/Casper">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/socketLogo"
        android:id="@+id/socketLogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textColor="#ffffff"
        android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incommmingMessage"
        android:id="@+id/response"
        android:layout_below="@+id/socketLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/connectButton"
        android:id="@+id/connectButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:background="#2DEF96" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/clearButton"
        android:id="@+id/clearButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/connectButton"
        android:layout_alignStart="@+id/connectButton"
        android:layout_marginBottom="69dp"
        android:background="#2DEF96" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sendButton"
        android:id="@+id/sendButton"
        android:onClick="sendMessageToServer"
        android:background="#2DEF96"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/clearButton"
        android:layout_alignStart="@+id/clearButton"
        android:layout_alignBottom="@+id/clearButton"
        android:layout_marginBottom="5dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/address"
        android:background="#ffffff"
        android:textAlignment="center"
        android:autoText="false"
        android:hint="@string/addressHint"
        android:textIsSelectable="false"
        android:textColor="#080808"
        android:layout_below="@+id/response"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/port"
        android:background="#ffffff"
        android:textAlignment="center"
        android:autoText="false"
        android:hint="@string/portHint"
        android:textIsSelectable="false"
        android:textColor="#080808"
        android:layout_below="@+id/address"
        android:layout_alignLeft="@+id/address"
        android:layout_alignStart="@+id/address"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/message"
        android:background="#ffffff"
        android:textAlignment="center"
        android:autoText="false"
        android:hint="@string/messageToServer"
        android:textIsSelectable="false"
        android:textColor="#080808"
        android:layout_below="@+id/port"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/errorMsg"
        android:layout_below="@+id/socketLogo"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0000"
        android:visibility="invisible" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateOnly="true"
        android:layout_below="@+id/socketLogo"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
